# winterjam-mc-link

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  Dockerfile  README.md  docker-compose.Development.yml
.github/workflows/: build.yml  ghcr.yml
api/: Cargo.toml
api/src/: health.rs  lib.rs  mojang.rs  server.rs  status.rs
api/src/api/: mod.rs
api/src/discord/: commands.rs  mod.rs  register.rs  webhook.rs
entity/src/: user.rs
migration/src/: m20220101_000001_create_users_table.rs
scripts/: docker-entrypoint.sh
src/: healthcheck.rs  main.rs
