[package]
name = "winterjam-mc-link"
version = "0.1.0"
edition = "2021"
authors = ["Up <up@upcraft.dev>"]
default-run = "winterjam-mc-link"

[workspace]
members = [
    ".",
    "entity",
    "migration",
    "api"
]

[[bin]]
name = "winterjam-mc-link"
path = "src/main.rs"

[[bin]]
name = "healthcheck"
path = "src/healthcheck.rs"

[dependencies]
mc_link_api = { path = "./api" }
tokio = { version = "1.35.1", features = ["full"] }
anyhow = "1.0.76"
reqwest = "0.11.23"
serde = { version = "1.0.193", features = ["derive"] }
